--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: SonarQube Analysis
+name: CI/CD Pipeline
 
 on:
   push:
@@ -7,6 +7,7 @@ on:
   pull_request:
     branches:
       - main
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -15,16 +16,72 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v2
 
-      - name: Install .NET CLI Global Tool
-        run: dotnet tool install --global dotnet-sonarscanner --version 6.2.0
+      - name: Display Start Message
+        run: echo "Starting the build process..."
 
-      - name: Begin Sonar Scanner
-        if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/premaster'
-        run: dotnet-sonarscanner begin /k:test_repoaq1sw2de /d:sonar.host.url=http://192.168.16.26:9099 /d:sonar.login=sqp_e2994767e335a58cda9f7fd3d75bdde8840439d7
+      - name: Change to Project Directory
+        run: cd "${{ github.workspace }}"
+
+      - name: Restore Dependencies
+        run: dotnet restore TestBuildApp/TestBuildApp.sln
 
       - name: Build Project
-        run: dotnet build
+        run: dotnet build TestBuildApp/TestBuildApp.sln
 
-      - name: End Sonar Scanner
-        if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/premaster'
-        run: dotnet-sonarscanner end /d:sonar.login=sqp_e2994767e335a58cda9f7fd3d75bdde8840439d7
+      - name: Create Publish Directory
+        run: mkdir -p ${GITHUB_WORKSPACE}/publish
+
+      - name: Display Publish Directory Contents
+        run: ls -R ${GITHUB_WORKSPACE}/publish
+
+      - name: Change to Project Directory
+        run: cd "${{ github.workspace }}/TestBuildApp"
+
+      - name: Display Directory Contents
+        run: ls -R "${{ github.workspace }}/TestBuildApp"
+
+      - name: Publish Application
+        run: dotnet publish -c Release -r win-x64 --self-contained -o ${GITHUB_WORKSPACE}/publish TestBuildApp/TestBuildApp.sln
+       
+      - name: Display Published Artifacts
+        run: ls -R ${GITHUB_WORKSPACE}/publish
+
+      - name: Archive Publish Directory
+        uses: actions/upload-artifact@v2
+        with: 
+          name: publish-artifact
+          path: ${{ github.workspace }}/publish
+
+  deploy:
+    runs-on: ubuntu-latest
+
+    needs: build
+
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+
+      - name: Display Start Message
+        run: echo "Starting the deployment process..."
+
+      - name: Download Published Artifacts
+        uses: actions/download-artifact@v2
+        with:
+           name: publish-artifact
+           path: ${{ github.workspace }}/publish
+
+      - name: Display Downloaded Artifact Contents
+        run: ls -R ${GITHUB_WORKSPACE}/publish
+        working-directory: ${{ github.workspace }}
+
+      - name: Create Deployment Directory
+        run: mkdir -p "C:/Deepak/deployment/"
+
+      - name: Display Deployment Directory Contents Before Copy
+        run: ls -R "C:/Deepak/deployment/"
+
+      - name: Copy to Deployment Location
+        run: cp -r "${GITHUB_WORKSPACE}/publish/"* "C:/Deepak/deployment/"
+
+      - name: Display Deployment Directory Contents After Copy
+        run: ls -R "C:/Deepak/deployment/"
