--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline.
+name: CI/CD Pipeline
 
 on:
   push:
@@ -10,7 +10,7 @@ on:
 
 jobs:
   build:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout Repository
@@ -20,16 +20,16 @@ jobs:
         run: echo "Starting the build process..."
 
       - name: Restore Dependencies
-        run: dotnet restore TestBuildApp/TestBuildApp.sln
+        run: dotnet restore TestBuildApp/TestBuildApp.sln --verbosity detailed
 
       - name: Build Project
-        run: dotnet build TestBuildApp/TestBuildApp.sln
+        run: dotnet build TestBuildApp/TestBuildApp.sln --verbosity detailed
 
       - name: Create Publish Directory
         run: mkdir -p ${{ github.workspace }}/publish
 
       - name: Publish Application
-        run: dotnet publish -c Release -r win-x64 --self-contained -o ${{ github.workspace }}/publish TestBuildApp/TestBuildApp.sln
+        run: dotnet publish TestBuildApp/TestBuildApp.sln -c Release -r win-x64 --self-contained -o ${{ github.workspace }}/publish --verbosity detailed
        
       - name: Display Published Artifacts
         run: ls -R ${{ github.workspace }}/publish
@@ -41,31 +41,30 @@ jobs:
           path: ${{ github.workspace }}/publish
 
   deploy:
-    runs-on: self-hosted  # Ensure this is correct for your self-hosted Windows runner
-
+    runs-on: ubuntu-latest
     needs: build
 
     steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+
       - name: Display Start Message
         run: echo "Starting the deployment process..."
 
       - name: Download Published Artifacts
         uses: actions/download-artifact@v4
         with:
-          name: publish-artifact
-          path: ${{ github.workspace }}\publish
+           name: publish-artifact
+           path: ${{ github.workspace }}/publish
 
       - name: Display Downloaded Artifact Contents
-        run: dir /s ${{ github.workspace }}\publish
+        run: ls -R ${{ github.workspace }}/publish
 
       - name: Create Deployment Directory
-        run: mkdir "C:\Deepak\deployment"
-
-      - name: Display Deployment Directory Contents Before Copy
-        run: dir /s "C:\Deepak\deployment"
+        run: mkdir -p "/home/runner/deployment"
 
       - name: Copy to Deployment Location
-        run: xcopy /E /I /Y "${{ github.workspace }}\publish\*" "C:\Deepak\deployment\"
+        run: cp -r ${{ github.workspace }}/publish/* "/home/runner/deployment/"
 
-      - name: Display Deployment Directory Contents After Copy
-        run: dir /s "C:\Deepak\deployment"
+      - name: Display Deployment Directory Contents
+        run: ls -R "/home/runner/deployment"
